--- a/design2-1.html
+++ b/design2-1.html
@@ -230,7 +230,7 @@
     <div class="header">
         <table>
             <tr>
-                <td style="top: 0%; color: black; font-size: 35px; font-weight: bold;"> <a href="design2.html">The Book.</a>
+                <td style="top: 0%; color: black; font-size: 35px; font-weight: bold;"> <a href="index.html">The Book.</a>
                         
                 </td> 
                 
